Fixing job post alignment

--- a/css/bctechjobs.css
+++ b/css/bctechjobs.css
@@ -4610,6 +4610,9 @@ img.max-width-100 {
   .xs-mauto {
     margin: 0 auto;
   }
+  .flex-end {
+    display: block;
+  }
 }
 html,
 button {
